--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -11,11 +11,11 @@
 		"@tauri-apps/api": "../../tooling/api/dist"
 	},
 	"devDependencies": {
-		"@iconify-json/codicon": "^1.1.49",
-		"@iconify-json/ph": "^1.1.13",
-		"@playform/build": "0.1.1",
-		"@unocss/extractor-svelte": "^0.61.0",
-		"unocss": "^0.61.0"
+		"@iconify-json/codicon": "1.1.51",
+		"@iconify-json/ph": "1.1.14",
+		"@playform/build": "0.1.3",
+		"@unocss/extractor-svelte": "0.62.2",
+		"unocss": "0.62.2"
 	},
 	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
