--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -12,11 +12,11 @@
 	],
 	"description": "Tauri API definitions",
 	"devDependencies": {
-		"@playform/build": "0.1.1",
-		"@types/node": "20.14.15",
+		"@playform/build": "0.1.3",
+		"@types/node": "22.4.0",
 		"fast-glob": "3.3.2",
-		"globals": "^15.4.0",
-		"tslib": "^2.6.3"
+		"globals": "15.9.0",
+		"tslib": "2.6.3"
 	},
 	"exports": {
 		".": {
