--- a/tooling/cli/node/package.json
+++ b/tooling/cli/node/package.json
@@ -15,8 +15,8 @@
 	],
 	"description": "Command line interface for building Tauri apps",
 	"devDependencies": {
-		"@napi-rs/cli": "2.18.3",
-		"@playform/build": "0.1.1",
+		"@napi-rs/cli": "3.0.0-alpha.62",
+		"@playform/build": "0.1.3",
 		"cross-env": "7.0.3",
 		"cross-spawn": "7.0.3",
 		"fs-extra": "11.2.0"
