--- a/tooling/cli/templates/plugin/__example-basic/vanilla/package.json
+++ b/tooling/cli/templates/plugin/__example-basic/vanilla/package.json
@@ -8,11 +8,11 @@
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"dependencies": {
-		"@tauri-apps/cli": "2.0.0-beta.23"
+		"@tauri-apps/cli": "2.0.0-rc.4"
 	},
 	"description": "",
 	"devDependencies": {
-		"@playform/build": "0.1.1"
+		"@playform/build": "0.1.3"
 	},
 	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
