--- a/tooling/cli/templates/plugin/package.json
+++ b/tooling/cli/templates/plugin/package.json
@@ -8,11 +8,11 @@
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"dependencies": {
-		"@tauri-apps/api": ">=2.0.0-beta.16"
+		"@tauri-apps/api": ">=2.0.0-rc.1"
 	},
 	"description": "",
 	"devDependencies": {
-		"@playform/build": "0.1.1",
+		"@playform/build": "0.1.3",
 		"tslib": "2.6.3"
 	},
 	"exports": {
