--- a/tooling/cli/node/npm/linux-arm-gnueabihf/package.json
+++ b/tooling/cli/node/npm/linux-arm-gnueabihf/package.json
@@ -1,32 +1,47 @@
 {
-  "name": "@tauri-apps/cli-linux-arm-gnueabihf",
-  "version": "0.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tauri-apps/tauri.git"
-  },
-  "homepage": "https://github.com/tauri-apps/tauri#readme",
-  "bugs": {
-    "url": "https://github.com/tauri-apps/tauri/issues"
-  },
-  "contributors": [
-    "Tauri Programme within The Commons Conservancy"
-  ],
-  "license": "Apache-2.0 OR MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "os": [
-    "linux"
-  ],
-  "cpu": [
-    "arm"
-  ],
-  "main": "cli.linux-arm-gnueabihf.node",
-  "files": [
-    "cli.linux-arm-gnueabihf.node"
-  ],
-  "engines": {
-    "node": ">= 10"
-  }
+	"author": {
+		"email": "Source/Open@Editor.Land",
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"url": "HTTPS://Editor.Land"
+	},
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	},
+	"contributors": [
+		"Tauri Programme within The Commons Conservancy"
+	],
+	"cpu": [
+		"arm"
+	],
+	"devDependencies": {
+		"@playform/build": "0.1.1"
+	},
+	"files": [
+		"cli.linux-arm-gnueabihf.node"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"keywords": [
+		"codeeditorland",
+		"land",
+		"playform"
+	],
+	"license": "SEE LICENSE IN LICENSE",
+	"main": "cli.linux-arm-gnueabihf.node",
+	"name": "@tauri-apps/cli-linux-arm-gnueabihf",
+	"os": [
+		"linux"
+	],
+	"private": false,
+	"publishConfig": {
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
+	},
+	"scripts": {
+		"prepublishOnly": "Build 'Source/**/*.ts'"
+	},
+	"type": "module",
+	"version": "0.0.1"
 }
