--- a/tooling/cli/templates/plugin/package.json
+++ b/tooling/cli/templates/plugin/package.json
@@ -13,7 +13,7 @@
 	"description": "",
 	"devDependencies": {
 		"@playform/build": "0.1.1",
-		"tslib": "^2.6.2"
+		"tslib": "2.6.2"
 	},
 	"exports": {
 		"import": "./dist-js/index.js",
