--- a/tooling/cli/templates/plugin/__example-basic/vanilla/package.json
+++ b/tooling/cli/templates/plugin/__example-basic/vanilla/package.json
@@ -10,7 +10,6 @@
 	"dependencies": {
 		"@tauri-apps/cli": "2.0.0-rc.7"
 	},
-	"description": "",
 	"devDependencies": {
 		"@playform/build": "0.1.3"
 	},
@@ -22,7 +21,7 @@
 	],
 	"license": "SEE LICENSE IN LICENSE",
 	"main": "index.js",
-	"name": "app",
+	"name": "app-example-basic",
 	"private": false,
 	"publishConfig": {
 		"access": "public"
