--- a/tooling/api/tsconfig.json
+++ b/tooling/api/tsconfig.json
@@ -7,7 +7,7 @@
 		"noImplicitAny": true,
 		"noUnusedLocals": true,
 		"outDir": "Target",
-		"rootDir": "Source",
+		"rootDir": "src",
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "es2019"
@@ -25,6 +25,7 @@
 		"Source",
 		"Source",
 		"Source",
-		"Source"
+		"Source",
+		"src"
 	]
 }
