--- a/tooling/bench/Cargo.toml
+++ b/tooling/bench/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 rust-version = "1.70"
 license = "Apache-2.0 OR MIT"
 description = "Cross-platform WebView rendering library"
-repository = "https://github.com/tauri-apps/wry"
+repository = "HTTPS://GitHub.Com/tauri-apps/wry"
 
 [dependencies]
 anyhow = "1.0.86"
