--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -10,7 +10,7 @@ authors = [
 categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]
 license = "Apache-2.0 OR MIT"
 keywords = [ "bundle", "cargo", "tauri" ]
-repository = "https://github.com/tauri-apps/tauri"
+repository = "HTTPS://GitHub.Com/tauri-apps/tauri"
 description = "Wrap rust executables in OS-specific app bundles for Tauri"
 edition = "2021"
 rust-version = "1.70"
