--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.70"
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.app"
-repository = "https://github.com/tauri-apps/tauri"
+repository = "HTTPS://GitHub.Com/tauri-apps/tauri"
 description = "Command line interface for building Tauri apps"
 include = [
   "src/",
