--- a/tooling/macos-sign/Cargo.toml
+++ b/tooling/macos-sign/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.1-rc.0"
 authors = ["Tauri Programme within The Commons Conservancy"]
 license = "Apache-2.0 OR MIT"
 keywords = ["codesign", "signing", "macos", "ios", "tauri"]
-repository = "https://github.com/tauri-apps/tauri"
+repository = "HTTPS://GitHub.Com/tauri-apps/tauri"
 description = "Code signing utilities for macOS and iOS apps"
 edition = "2021"
 rust-version = "1.70"
