--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -11,11 +11,11 @@
 		"@tauri-apps/api": "../../packages/api/dist"
 	},
 	"devDependencies": {
-		"@iconify-json/codicon": "^1.1.49",
-		"@iconify-json/ph": "^1.1.13",
+		"@iconify-json/codicon": "1.2.0",
+		"@iconify-json/ph": "1.2.0",
 		"@playform/build": "0.1.4",
-		"@unocss/extractor-svelte": "^0.61.0",
-		"unocss": "^0.61.0"
+		"@unocss/extractor-svelte": "0.62.3",
+		"unocss": "0.62.3"
 	},
 	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
