--- a/crates/tauri-runtime-wry/Cargo.toml
+++ b/crates/tauri-runtime-wry/Cargo.toml
@@ -62,3 +62,6 @@ objc-exception = ["wry/objc-exception"]
 tracing = ["dep:tracing", "wry/tracing"]
 macos-proxy = ["wry/mac-proxy"]
 unstable = []
+
+[lib]
+path = "Source/lib.rs"
