--- a/crates/tauri-driver/Cargo.toml
+++ b/crates/tauri-driver/Cargo.toml
@@ -32,3 +32,6 @@ which = "4"
 [target."cfg(unix)".dependencies]
 signal-hook = "0.3"
 signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
+
+[lib]
+path = "Source/main.rs"
