--- a/crates/tauri-plugin/Cargo.toml
+++ b/crates/tauri-plugin/Cargo.toml
@@ -41,3 +41,6 @@ walkdir = { version = "2", optional = true }
 
 [target."cfg(target_os = \"macos\")".dependencies]
 plist = { version = "1", optional = true }
+
+[lib]
+path = "Source/lib.rs"
