--- a/crates/tauri-schema-generator/Cargo.toml
+++ b/crates/tauri-schema-generator/Cargo.toml
@@ -10,3 +10,7 @@ schemars = { version = "0.8", features = ["url", "preserve_order"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url = { version = "2.3", features = ["serde"] }
+
+[[bin]]
+name = "tauri-schema-generator"
+path = "Source/main.rs"
