--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.0.0"
 
 [lib]
 crate-type = ["cdylib"]
+path = "Source/lib.rs"
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
