--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,16 @@
+[build]
+target-dir = "Target"
+
+[cargo-new]
+vcs = "git"
+
+[profile.release]
+opt-level = 3
+codegen-units = 1
+debug = false
+lto = true
+panic = "abort"
+strip = true
+
 [env]
-# workaround needed to prevent `STATUS_ENTRYPOINT_NOT_FOUND` error in tests
-# see https://github.com/tauri-apps/tauri/pull/4383#issuecomment-1212221864
 __TAURI_WORKSPACE__ = "true"
