--- a/packages/cli/.cargo/config.toml
+++ b/packages/cli/.cargo/config.toml
@@ -1,3 +1,17 @@
+[build]
+target-dir = "Target"
+
+[cargo-new]
+vcs = "git"
+
+[profile.release]
+opt-level = 3
+codegen-units = 1
+debug = false
+lto = true
+panic = "abort"
+strip = true
+
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
 
