--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,12 +1,4 @@
 {
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
 	"contributors": [
 		"Tauri Programme within The Commons Conservancy"
 	],
@@ -35,24 +27,9 @@
 		"type": "opencollective",
 		"url": "https://opencollective.com/tauri"
 	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"license": "SEE LICENSE IN LICENSE",
 	"main": "./index.cjs",
 	"module": "./index.js",
 	"name": "@tauri-apps/api",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
 	"scripts": {
 		"build": "rollup -c --configPlugin typescript",
 		"eslint:check": "eslint src/**.ts",
@@ -62,7 +39,5 @@
 		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"ts:check": "tsc --noEmit"
 	},
-	"type": "module",
-	"types": "./index.d.ts",
-	"version": "0.0.1"
+	"types": "./index.d.ts"
 }
