--- a/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
+++ b/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-
-=======
 {
 	"author": {
 		"email": "Source/Open@Editor.Land",
@@ -11,12 +8,12 @@
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"dependencies": {
-		"@tauri-apps/api": "^2.0.0-alpha.11",
+		"@tauri-apps/api": "2.0.0-alpha.11",
 		"tauri-plugin-{{ plugin_name }}-api": "file:../../"
 	},
 	"devDependencies": {
 		"@playform/build": "0.1.6",
-		"@tauri-apps/cli": "^2.0.0-alpha.17"
+		"@tauri-apps/cli": "2.0.0-alpha.17"
 	},
 	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
@@ -44,4 +41,3 @@
 	"type": "module",
 	"version": "0.0.1"
 }
->>>>>>> 98d352f25c85ca7ab7e05e8d462e5f238ebfb862
