--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-
-=======
 {
 	"author": {
 		"email": "Source/Open@Editor.Land",
@@ -16,7 +13,7 @@
 	"description": "",
 	"devDependencies": {
 		"@playform/build": "0.1.6",
-		"tslib": "^2.6.2"
+		"tslib": "2.6.2"
 	},
 	"exports": {
 		"import": "./dist-js/index.js",
@@ -53,4 +50,3 @@
 	"types": "./dist-js/index.d.ts",
 	"version": "0.0.1"
 }
->>>>>>> 98d352f25c85ca7ab7e05e8d462e5f238ebfb862
