--- a/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
+++ b/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
@@ -30,12 +30,12 @@
 		"tauri": "tauri"
 	},
 	"dependencies": {
-		"@tauri-apps/api": "2.0.0-alpha.11",
+		"@tauri-apps/api": "2.0.0-rc.5",
 		"tauri-plugin-{{ plugin_name }}-api": "file:../../"
 	},
 	"devDependencies": {
-		"@playform/build": "0.1.6",
-		"@tauri-apps/cli": "2.0.0-alpha.17"
+		"@playform/build": "0.1.7",
+		"@tauri-apps/cli": "2.0.0-rc.16"
 	},
 	"publishConfig": {
 		"access": "public"
