--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -40,11 +40,11 @@
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
-		"@tauri-apps/api": ">=2.0.0-beta.6"
+		"@tauri-apps/api": ">=2.0.0-rc.5"
 	},
 	"devDependencies": {
-		"@playform/build": "0.1.6",
-		"tslib": "2.6.2"
+		"@playform/build": "0.1.7",
+		"tslib": "2.7.0"
 	},
 	"publishConfig": {
 		"access": "public"
