--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -1,52 +1,27 @@
 {
-	"name": "tauri-plugin-{{ plugin_name }}-api",
-	"version": "0.0.1",
-	"private": false,
+	"dependencies": {
+		"@tauri-apps/api": ">=2.0.0-rc.5"
+	},
 	"description": "",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	"devDependencies": {
+		"@playform/build": "0.1.7",
+		"tslib": "2.7.0"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"email": "Source/Open@Editor.Land",
-		"url": "HTTPS://Editor.Land"
-	},
-	"type": "module",
 	"exports": {
 		"import": "./dist-js/index.js",
 		"require": "./dist-js/index.cjs",
 		"types": "./dist-js/index.d.ts"
 	},
-	"main": "./dist-js/index.cjs",
-	"module": "./dist-js/index.js",
-	"types": "./dist-js/index.d.ts",
 	"files": [
 		"dist-js",
 		"README.md"
 	],
+	"main": "./dist-js/index.cjs",
+	"module": "./dist-js/index.js",
+	"name": "tauri-plugin-{{ plugin_name }}-api",
 	"scripts": {
 		"build": "rollup -c",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
-	"dependencies": {
-		"@tauri-apps/api": ">=2.0.0-rc.5"
-	},
-	"devDependencies": {
-		"@playform/build": "0.1.7",
-		"tslib": "2.7.0"
-	},
-	"publishConfig": {
-		"access": "public"
-	}
+	"types": "./dist-js/index.d.ts"
 }
