--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,35 +1,15 @@
 {
-	"name": "@tauri-apps/api",
-	"version": "0.0.1",
-	"private": false,
-	"description": "Tauri API definitions",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
-	"funding": {
-		"type": "opencollective",
-		"url": "https://opencollective.com/tauri"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"email": "Source/Open@Editor.Land",
-		"url": "HTTPS://Editor.Land"
-	},
 	"contributors": [
 		"Tauri Programme within The Commons Conservancy"
 	],
-	"type": "module",
+	"description": "Tauri API definitions",
+	"devDependencies": {
+		"@playform/build": "0.1.7",
+		"@types/node": "22.7.3",
+		"fast-glob": "3.3.2",
+		"globals": "15.9.0",
+		"tslib": "2.7.0"
+	},
 	"exports": {
 		".": {
 			"import": "./index.js",
@@ -43,9 +23,13 @@
 		},
 		"./package.json": "./package.json"
 	},
+	"funding": {
+		"type": "opencollective",
+		"url": "https://opencollective.com/tauri"
+	},
 	"main": "./index.cjs",
 	"module": "./index.js",
-	"types": "./index.d.ts",
+	"name": "@tauri-apps/api",
 	"scripts": {
 		"build": "rollup -c --configPlugin typescript",
 		"eslint:check": "eslint src/**.ts",
@@ -55,14 +39,5 @@
 		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"ts:check": "tsc --noEmit"
 	},
-	"devDependencies": {
-		"@playform/build": "0.1.7",
-		"@types/node": "22.7.3",
-		"fast-glob": "3.3.2",
-		"globals": "15.9.0",
-		"tslib": "2.7.0"
-	},
-	"publishConfig": {
-		"access": "public"
-	}
+	"types": "./index.d.ts"
 }
