--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -1,67 +1,45 @@
 {
-<<<<<<< HEAD
-=======
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
-	"dependencies": {
-		"@tauri-apps/api": "../../packages/api/dist"
-	},
-	"devDependencies": {
-<<<<<<< HEAD
-		"@iconify-json/codicon": "1.2.1",
-		"@iconify-json/ph": "1.2.0",
-=======
-<<<<<<< HEAD
-		"@iconify-json/codicon": "1.2.1",
-		"@iconify-json/ph": "1.2.0",
-		"@playform/build": "0.1.7",
-		"@unocss/extractor-svelte": "0.62.4",
-		"unocss": "0.62.4"
-	},
 	"name": "api",
-=======
-		"@iconify-json/codicon": "1.1.49",
-		"@iconify-json/ph": "1.1.13",
->>>>>>> a4328dd3d725ca41310e4c41184073037b802bf4
-		"@playform/build": "0.1.7",
-		"@unocss/extractor-svelte": "0.62.4",
-		"unocss": "0.62.4"
-	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"version": "0.0.1",
+	"private": false,
 	"keywords": [
 		"codeeditorland",
 		"land",
 		"playform"
 	],
-	"license": "SEE LICENSE IN LICENSE",
-	"name": "api",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
 	},
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"email": "Source/Open@Editor.Land",
+		"url": "HTTPS://Editor.Land"
+	},
+	"type": "module",
 	"scripts": {
 		"build": "vite build",
 		"dev": "vite",
 		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"preview": "vite preview",
 		"tauri": "node ../../packages/cli/tauri.js"
-<<<<<<< HEAD
-	}
-=======
 	},
-	"type": "module",
-	"version": "0.0.1"
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
+	"dependencies": {
+		"@tauri-apps/api": "../../packages/api/dist"
+	},
+	"devDependencies": {
+		"@iconify-json/codicon": "1.1.49",
+		"@iconify-json/ph": "1.1.13",
+		"@playform/build": "0.1.7",
+		"@unocss/extractor-svelte": "0.62.4",
+		"unocss": "0.62.4"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
