--- a/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
+++ b/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
@@ -1,66 +1,43 @@
 {
-<<<<<<< HEAD
-	"dependencies": {
-		"@tauri-apps/api": "2.0.0-rc.5",
-=======
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
-	"dependencies": {
-<<<<<<< HEAD
-		"@tauri-apps/api": "2.0.0-rc.5",
-=======
-		"@tauri-apps/api": "2.0.0-alpha.11",
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
->>>>>>> a4328dd3d725ca41310e4c41184073037b802bf4
-		"tauri-plugin-{{ plugin_name }}-api": "file:../../"
-	},
-	"devDependencies": {
-		"@playform/build": "0.1.7",
-<<<<<<< HEAD
-		"@tauri-apps/cli": "2.0.0-rc.16"
-=======
-<<<<<<< HEAD
-		"@tauri-apps/cli": "2.0.0-rc.16"
-	},
 	"name": "tauri-app",
-=======
-		"@tauri-apps/cli": "2.0.0-alpha.17"
->>>>>>> a4328dd3d725ca41310e4c41184073037b802bf4
-	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"version": "0.0.1",
+	"private": false,
 	"keywords": [
 		"codeeditorland",
 		"land",
 		"playform"
 	],
-	"license": "SEE LICENSE IN LICENSE",
-	"name": "tauri-app",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
 	},
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"email": "Source/Open@Editor.Land",
+		"url": "HTTPS://Editor.Land"
+	},
+	"type": "module",
 	"scripts": {
 		"build": "vite build",
 		"dev": "vite",
 		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"preview": "vite preview",
 		"tauri": "tauri"
-<<<<<<< HEAD
-	}
-=======
 	},
-	"type": "module",
-	"version": "0.0.1"
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
+	"dependencies": {
+		"@tauri-apps/api": "2.0.0-alpha.11",
+		"tauri-plugin-{{ plugin_name }}-api": "file:../../"
+	},
+	"devDependencies": {
+		"@playform/build": "0.1.7",
+		"@tauri-apps/cli": "2.0.0-alpha.17"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
