--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -1,73 +1,52 @@
 {
-<<<<<<< HEAD
-	"dependencies": {
-		"@tauri-apps/api": ">=2.0.0-rc.5"
-	},
-	"description": "",
-	"devDependencies": {
-		"@playform/build": "0.1.7",
-		"tslib": "2.7.0"
-	},
-=======
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
-	"dependencies": {
-		"@tauri-apps/api": ">=2.0.0-rc.5"
-	},
-	"description": "",
-	"devDependencies": {
-		"@playform/build": "0.1.7",
-		"tslib": "2.7.0"
-	},
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
-	"exports": {
-		"import": "./dist-js/index.js",
-		"require": "./dist-js/index.cjs",
-		"types": "./dist-js/index.d.ts"
-	},
-	"files": [
-		"dist-js",
-		"README.md"
-	],
-<<<<<<< HEAD
-	"main": "./dist-js/index.cjs",
-	"module": "./dist-js/index.js",
 	"name": "tauri-plugin-{{ plugin_name }}-api",
-=======
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"version": "0.0.1",
+	"private": false,
+	"description": "",
 	"keywords": [
 		"codeeditorland",
 		"land",
 		"playform"
 	],
-	"license": "SEE LICENSE IN LICENSE",
-	"main": "./dist-js/index.cjs",
-	"module": "./dist-js/index.js",
-	"name": "tauri-plugin-{{ plugin_name }}-api",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
 	},
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"email": "Source/Open@Editor.Land",
+		"url": "HTTPS://Editor.Land"
+	},
+	"type": "module",
+	"exports": {
+		"import": "./dist-js/index.js",
+		"require": "./dist-js/index.cjs",
+		"types": "./dist-js/index.d.ts"
+	},
+	"main": "./dist-js/index.cjs",
+	"module": "./dist-js/index.js",
+	"types": "./dist-js/index.d.ts",
+	"files": [
+		"dist-js",
+		"README.md"
+	],
 	"scripts": {
 		"build": "rollup -c",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
-<<<<<<< HEAD
-	"types": "./dist-js/index.d.ts"
-=======
-	"type": "module",
-	"types": "./dist-js/index.d.ts",
-	"version": "0.0.1"
->>>>>>> 4794c17ef5f7d5fbc892a5dac5c2552da163836b
+	"dependencies": {
+		"@tauri-apps/api": ">=2.0.0-rc.5"
+	},
+	"devDependencies": {
+		"@playform/build": "0.1.7",
+		"tslib": "2.7.0"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
