--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,38 +1,58 @@
 {
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bin": {
-		"tauri": "./tauri.js"
-	},
+	"name": "@tauri-apps/cli",
+	"version": "0.0.1",
+	"private": false,
+	"description": "Command line interface for building Tauri apps",
+	"keywords": [
+		"codeeditorland",
+		"land",
+		"playform"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"bugs": {
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
+	},
+	"funding": {
+		"type": "opencollective",
+		"url": "https://opencollective.com/tauri"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"email": "Source/Open@Editor.Land",
+		"url": "HTTPS://Editor.Land"
 	},
 	"contributors": [
 		"Tauri Programme within The Commons Conservancy"
 	],
-	"description": "Command line interface for building Tauri apps",
+	"type": "module",
+	"main": "main.js",
+	"types": "main.d.ts",
+	"bin": {
+		"tauri": "./tauri.js"
+	},
+	"scripts": {
+		"artifacts": "napi artifacts",
+		"build": "cross-env TARGET=node napi build --platform",
+		"build:release": "cross-env TARGET=node napi build --platform --profile release-size-optimized",
+		"prepack": "cp ../../crates/tauri-schema-generator/schemas/config.schema.json .",
+		"prepublishOnly": "Build 'Source/**/*.ts'",
+		"tauri": "node ./tauri.js",
+		"version": "napi version"
+	},
 	"devDependencies": {
 		"@napi-rs/cli": "2.18.3",
 		"@playform/build": "0.1.6",
 		"@types/node": "20.16.1",
 		"cross-env": "7.0.3"
 	},
-	"funding": {
-		"type": "opencollective",
-		"url": "https://opencollective.com/tauri"
+	"publishConfig": {
+		"access": "public"
 	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"license": "SEE LICENSE IN LICENSE",
-	"main": "main.js",
-	"name": "@tauri-apps/cli",
 	"napi": {
 		"name": "cli",
 		"triples": {
@@ -46,25 +66,5 @@
 				"aarch64-pc-windows-msvc"
 			]
 		}
-	},
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
-	"scripts": {
-		"artifacts": "napi artifacts",
-		"build": "cross-env TARGET=node napi build --platform",
-		"build:release": "cross-env TARGET=node napi build --platform --profile release-size-optimized",
-		"prepack": "cp ../../crates/tauri-schema-generator/schemas/config.schema.json .",
-		"prepublishOnly": "Build 'Source/**/*.ts'",
-		"tauri": "node ./tauri.js",
-		"version": "napi version"
-	},
-	"type": "module",
-	"types": "main.d.ts",
-	"version": "0.0.1"
+	}
 }
