--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -45,7 +45,7 @@
 	},
 	"devDependencies": {
 		"@playform/build": "0.1.6",
-		"tslib": "^2.6.2"
+		"tslib": "2.6.2"
 =======
 		"@tauri-apps/api": ">=2.0.0-rc.5"
 	},
