--- a/crates/tauri-cli/templates/plugin/__example-basic/vanilla/package.json
+++ b/crates/tauri-cli/templates/plugin/__example-basic/vanilla/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@tauri-apps/cli": "^2.0.0-alpha.17"
+		"@tauri-apps/cli": "2.0.0-alpha.17"
 	},
 	"description": "",
 	"devDependencies": {
