--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -5,7 +5,7 @@
 	"description": "",
 	"devDependencies": {
 		"@playform/build": "",
-		"tslib": "^2.6.2"
+		"tslib": "2.6.2"
 	},
 	"exports": {
 		"import": "./dist-js/index.js",
