--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -1,27 +1,27 @@
 {
-	"name": "tauri-plugin-{{ plugin_name }}-api",
+	"dependencies": {
+		"@tauri-apps/api": ">=2.0.1"
+	},
 	"description": "",
+	"devDependencies": {
+		"@playform/build": "",
+		"tslib": "2.7.0"
+	},
 	"exports": {
 		"import": "./dist-js/index.js",
 		"require": "./dist-js/index.cjs",
 		"types": "./dist-js/index.d.ts"
 	},
-	"main": "./dist-js/index.cjs",
-	"module": "./dist-js/index.js",
-	"types": "./dist-js/index.d.ts",
 	"files": [
 		"dist-js",
 		"README.md"
 	],
+	"main": "./dist-js/index.cjs",
+	"module": "./dist-js/index.js",
+	"name": "tauri-plugin-{{ plugin_name }}-api",
 	"scripts": {
 		"build": "rollup -c",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
-	"dependencies": {
-		"@tauri-apps/api": ">=2.0.1"
-	},
-	"devDependencies": {
-		"@playform/build": "",
-		"tslib": "2.7.0"
-	}
+	"types": "./dist-js/index.d.ts"
 }
