--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -1,62 +1,25 @@
 {
-<<<<<<< HEAD
-=======
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	"dependencies": {
-		"@tauri-apps/api": "../../packages/api/dist"
-	},
-	"devDependencies": {
-<<<<<<< HEAD
-		"@iconify-json/codicon": "1.2.2",
-		"@iconify-json/ph": "1.2.0",
-		"@playform/build": "",
-		"@unocss/extractor-svelte": "0.63.2",
-		"unocss": "0.63.2"
-	},
-	"name": "api",
-=======
-		"@iconify-json/codicon": "1.1.49",
-		"@iconify-json/ph": "1.1.13",
-		"@playform/build": "",
-		"@unocss/extractor-svelte": "0.61.0",
-		"unocss": "0.61.0"
-	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"license": "SEE LICENSE IN LICENSE",
-	"name": "api",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	"scripts": {
-		"build": "vite build",
-		"dev": "vite",
-		"prepublishOnly": "Build 'Source/**/*.ts'",
-		"preview": "vite preview",
-		"tauri": "node ../../packages/cli/tauri.js"
-<<<<<<< HEAD
-	}
-=======
-	},
-	"type": "module",
-	"version": "0.0.1"
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
+  "name": "api",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "tauri": "node ../../packages/cli/tauri.js"
+  },
+  "dependencies": {
+    "@tauri-apps/api": "../../packages/api/dist",
+    "@zerodevx/svelte-json-view": "1.0.9"
+  },
+  "devDependencies": {
+    "@iconify-json/codicon": "^1.1.49",
+    "@iconify-json/ph": "^1.1.13",
+    "@unocss/extractor-svelte": "^0.61.0",
+    "unocss": "^0.61.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "svelte": "^4.2.19",
+    "vite": "^5.4.7"
+  }
 }
