--- a/examples/resources/package.json
+++ b/examples/resources/package.json
@@ -1,45 +1,7 @@
 {
-<<<<<<< HEAD
-	"devDependencies": {
-		"@playform/build": ""
-	},
-=======
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
-	"devDependencies": {
-		"@playform/build": ""
-	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"license": "SEE LICENSE IN LICENSE",
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	"name": "resources",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
-	"scripts": {
-		"prepublishOnly": "Build 'Source/**/*.ts'",
-		"tauri": "node ../../packages/cli/tauri.js"
-<<<<<<< HEAD
-	}
-=======
-	},
-	"type": "module",
-	"version": "0.0.1"
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
+  "name": "resources",
+  "version": "0.1.0",
+  "scripts": {
+    "tauri": "node ../../packages/cli/tauri.js"
+  }
 }
