--- a/packages/cli/npm/linux-arm64-musl/package.json
+++ b/packages/cli/npm/linux-arm64-musl/package.json
@@ -1,65 +1,35 @@
 {
-<<<<<<< HEAD
-=======
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	"contributors": [
-		"Tauri Programme within The Commons Conservancy"
-	],
-	"cpu": [
-		"arm64"
-	],
-	"devDependencies": {
-		"@playform/build": ""
-	},
-	"files": [
-		"cli.linux-arm64-musl.node"
-	],
-<<<<<<< HEAD
-	"libc": [
-		"musl"
-	],
-=======
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"libc": [
-		"musl"
-	],
-	"license": "SEE LICENSE IN LICENSE",
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	"main": "cli.linux-arm64-musl.node",
-	"name": "@tauri-apps/cli-linux-arm64-musl",
-	"os": [
-		"linux"
-	],
-<<<<<<< HEAD
-	"scripts": {
-		"prepublishOnly": "Build 'Source/**/*.ts'"
-	}
-=======
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
-	"scripts": {
-		"prepublishOnly": "Build 'Source/**/*.ts'"
-	},
-	"type": "module",
-	"version": "0.0.1"
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
+  "name": "@tauri-apps/cli-linux-arm64-musl",
+  "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tauri-apps/tauri.git"
+  },
+  "homepage": "https://github.com/tauri-apps/tauri#readme",
+  "bugs": {
+    "url": "https://github.com/tauri-apps/tauri/issues"
+  },
+  "contributors": [
+    "Tauri Programme within The Commons Conservancy"
+  ],
+  "license": "Apache-2.0 OR MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "os": [
+    "linux"
+  ],
+  "cpu": [
+    "arm64"
+  ],
+  "libc": [
+    "musl"
+  ],
+  "main": "cli.linux-arm64-musl.node",
+  "files": [
+    "cli.linux-arm64-musl.node"
+  ],
+  "engines": {
+    "node": ">= 10"
+  }
 }
