--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,87 +1,64 @@
 {
-<<<<<<< HEAD
-	"bin": {
-		"tauri": "./tauri.js"
-=======
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bin": {
-		"tauri": "./tauri.js"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	},
-	"contributors": [
-		"Tauri Programme within The Commons Conservancy"
-	],
-	"description": "Command line interface for building Tauri apps",
-	"devDependencies": {
-		"@napi-rs/cli": "2.18.3",
-		"@playform/build": "",
-		"@types/node": "20.16.1",
-		"cross-env": "7.0.3"
-	},
-	"funding": {
-		"type": "opencollective",
-		"url": "https://opencollective.com/tauri"
-	},
-<<<<<<< HEAD
-=======
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"keywords": [
-		"codeeditorland",
-		"land",
-		"playform"
-	],
-	"license": "SEE LICENSE IN LICENSE",
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	"main": "main.js",
-	"name": "@tauri-apps/cli",
-	"napi": {
-		"name": "cli",
-		"triples": {
-			"additional": [
-				"aarch64-apple-darwin",
-				"aarch64-unknown-linux-gnu",
-				"aarch64-unknown-linux-musl",
-				"armv7-unknown-linux-gnueabihf",
-				"x86_64-unknown-linux-musl",
-				"i686-pc-windows-msvc",
-				"aarch64-pc-windows-msvc"
-			]
-		}
-	},
-<<<<<<< HEAD
-=======
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
-	},
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
-	"scripts": {
-		"artifacts": "napi artifacts",
-		"build": "cross-env TARGET=node napi build --platform --profile release-size-optimized",
-		"build:debug": "cross-env TARGET=node napi build --platform",
-		"postbuild": "node append-headers.js",
-		"postbuild:debug": "node append-headers.js",
-		"prepack": "cp ../../crates/tauri-schema-generator/schemas/config.schema.json .",
-		"prepublishOnly": "Build 'Source/**/*.ts'",
-		"tauri": "node ./tauri.js",
-		"version": "napi version"
-	},
-<<<<<<< HEAD
-	"types": "main.d.ts"
-=======
-	"type": "module",
-	"types": "main.d.ts",
-	"version": "0.0.1"
->>>>>>> 8cdac84459656693c4229b538263d639b0cfe0b6
+  "name": "@tauri-apps/cli",
+  "version": "2.0.1",
+  "description": "Command line interface for building Tauri apps",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/tauri"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tauri-apps/tauri.git"
+  },
+  "contributors": [
+    "Tauri Programme within The Commons Conservancy"
+  ],
+  "license": "Apache-2.0 OR MIT",
+  "bugs": {
+    "url": "https://github.com/tauri-apps/tauri/issues"
+  },
+  "homepage": "https://github.com/tauri-apps/tauri#readme",
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "main.js",
+  "types": "main.d.ts",
+  "napi": {
+    "name": "cli",
+    "triples": {
+      "additional": [
+        "aarch64-apple-darwin",
+        "aarch64-unknown-linux-gnu",
+        "aarch64-unknown-linux-musl",
+        "armv7-unknown-linux-gnueabihf",
+        "x86_64-unknown-linux-musl",
+        "i686-pc-windows-msvc",
+        "aarch64-pc-windows-msvc"
+      ]
+    }
+  },
+  "devDependencies": {
+    "@napi-rs/cli": "2.18.3",
+    "@types/node": "20.16.1",
+    "cross-env": "7.0.3",
+    "vitest": "^2.1.1"
+  },
+  "engines": {
+    "node": ">= 10"
+  },
+  "bin": {
+    "tauri": "./tauri.js"
+  },
+  "scripts": {
+    "artifacts": "napi artifacts",
+    "build": "cross-env TARGET=node napi build --platform --profile release-size-optimized",
+    "postbuild": "node append-headers.js",
+    "build:debug": "cross-env TARGET=node napi build --platform",
+    "postbuild:debug": "node append-headers.js",
+    "prepublishOnly": "napi prepublish -t npm --gh-release-id $RELEASE_ID",
+    "prepack": "cp ../../crates/tauri-schema-generator/schemas/config.schema.json .",
+    "version": "napi version",
+    "test": "vitest run",
+    "tauri": "node ./tauri.js"
+  }
 }
