--- a/packages/cli/npm/win32-arm64-msvc/package.json
+++ b/packages/cli/npm/win32-arm64-msvc/package.json
@@ -14,7 +14,7 @@
 		"arm64"
 	],
 	"devDependencies": {
-		"@playform/build": ""
+		"@playform/build": "0.1.7"
 	},
 	"files": [
 		"cli.win32-arm64-msvc.node"
