--- a/packages/cli/npm/win32-ia32-msvc/package.json
+++ b/packages/cli/npm/win32-ia32-msvc/package.json
@@ -14,7 +14,7 @@
 		"ia32"
 	],
 	"devDependencies": {
-		"@playform/build": ""
+		"@playform/build": "0.1.7"
 	},
 	"files": [
 		"cli.win32-ia32-msvc.node"
