--- a/packages/cli/npm/linux-x64-musl/package.json
+++ b/packages/cli/npm/linux-x64-musl/package.json
@@ -1,4 +1,12 @@
 {
+	"author": {
+		"email": "Source/Open@Editor.Land",
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"url": "HTTPS://Editor.Land"
+	},
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	},
 	"contributors": [
 		"Tauri Programme within The Commons Conservancy"
 	],
@@ -11,15 +19,32 @@
 	"files": [
 		"cli.linux-x64-musl.node"
 	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"keywords": [
+		"codeeditorland",
+		"land",
+		"playform"
+	],
 	"libc": [
 		"musl"
 	],
+	"license": "SEE LICENSE IN LICENSE",
 	"main": "cli.linux-x64-musl.node",
 	"name": "@tauri-apps/cli-linux-x64-musl",
 	"os": [
 		"linux"
 	],
+	"private": false,
+	"publishConfig": {
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
+	},
 	"scripts": {
 		"prepublishOnly": "Build 'Source/**/*.ts'"
-	}
+	},
+	"type": "module",
+	"version": "0.0.1"
 }
